refactor: remove wrong idempotency implementation and just point out in further improvements
